# Quantum-Werewolf

./: README.md  cli.py  pyproject.toml  quantumwerewolf.py
.github/workflows/: python-package.yml
quantumwerewolf/: backend.py  cli.py  quantumwerewolf.py
tests/: full-test.sh  input.txt  test_backend.py  unit-tests.py
